[metadata]
name = powerpyspice
version = 0.0.1
summary = POWERful SPICE python toolkit
description-file=
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =     
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    power-plot = powerpyspice.cmd.powerplot:main
    spice-to-hdf = powerpyspice.cmd.spicetohdf:main
    power-editor = powerpyspice.cmd.powerwaveform:main
