[metadata]
name = powerpyspice
summary = POWERful SPICE python toolkit
description-file=
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =     
    Environment :: X11 Applications
    Environment :: X11 Applications :: GTK
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Visualization

[entry_points]
console_scripts =
    power-plot = powerpyspice.cmd.powerplot:main
    spice-to-hdf = powerpyspice.cmd.spicetohdf:main
    power-editor = powerpyspice.cmd.powerwaveform:main
